Improve the main site

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description"
-    content="Deformable Neural Radiance Fields creates free-viewpoint portraits (nerfies) from casually captured videos.">
-  <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
+  <meta name="description" content="CausalRivers - Scaling up benchmarking of causal discovery for real-world time-series">
+  <meta name="keywords" content="CausalRivers, Germany, Rivers, Causality, Benchmarking, Time-Series">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CausalRivers - Scaling up benchmarking of causal discovery for real-world time-series</title>
 
@@ -23,10 +22,8 @@
   <script src="./static/js/bulma-slider.min.js"></script>
   <script src="./static/js/index.js"></script>
 </head>
-</head>
 
 <body>
-
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
@@ -37,12 +34,11 @@
     </div>
     <div class="navbar-menu">
       <div class="navbar-start" style="flex-grow: 1; justify-content: center;">
-        <a class="navbar-item" href="https://keunhong.com">
+        <a class="navbar-item" href="https://github.com/cvjena">
           <span class="icon">
             <i class="fas fa-home"></i>
           </span>
         </a>
-
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">
             More Research
@@ -54,41 +50,36 @@
             <a class="navbar-item" href="https://arxiv.org/abs/2402.09305">
               Causal Pretraining
             </a>
-
           </div>
         </div>
       </div>
-
     </div>
   </nav>
-
 
   <section class="hero">
     <div class="hero-body">
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">CausalRivers - Scaling up benchmarking of causal discovery for
-              real-world time-series</h1>
+            <h1 class="title is-1 publication-title"><u>CausalRivers</u><br> Scaling up benchmarking of causal discovery for real-world time-series</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://github.com/Gideon-Stein">Gideon Stein</a><sup>1</sup>,</span>
+                <a href="https://github.com/Gideon-Stein">Gideon Stein</a>,</span>
               <span class="author-block">
-                <a href="https://scholar.google.de/citations?user=ElQ7URQAAAAJ&hl=en">Maha
-                  Shadaydeh</a><sup>1</sup>,</span>
+                <a href="https://scholar.google.de/citations?user=ElQ7URQAAAAJ&hl=en">Maha Shadaydeh</a>,</span>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=WyB9nuYAAAAJ&hl=de">Jan Blunk</a><sup>1</sup>,
+                <a href="https://scholar.google.com/citations?user=WyB9nuYAAAAJ&hl=de">Jan Blunk</a>,
               </span>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=s9bfMqEAAAAJ&hl=de">Niklas Penzel</a><sup>1</sup>,
+                <a href="https://scholar.google.com/citations?user=s9bfMqEAAAAJ&hl=de">Niklas Penzel</a>,
               </span>
               <span class="author-block">
-                <a href="https://scholar.google.de/citations?hl=en&user=bhpi3vgAAAAJ">Joachim Denzler</a><sup>1</sup>,
+                <a href="https://scholar.google.de/citations?hl=en&user=bhpi3vgAAAAJ">Joachim Denzler</a>
               </span>
             </div>
 
             <div class="is-size-5 publication-authors">
-              <span class="author-block"><sup>1</sup>Computer Vision Group Jena, Friedrich Schiller University
+              <span class="author-block">Computer Vision Group Jena, Friedrich Schiller University
                 Jena</span>
             </div>
 
@@ -96,8 +87,7 @@
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a href="https://openreview.net/forum?id=wmV4cIbgl6"
-                    class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://openreview.net/pdf?id=wmV4cIbgl6" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
@@ -105,8 +95,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://openreview.net/forum?id=wmV4cIbgl6"
-                    class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://openreview.net/forum?id=wmV4cIbgl6" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
@@ -115,8 +104,7 @@
                 </span>
                 <!-- Code Link. -->
                 <span class="link-block">
-                  <a href="https://github.com/CausalRivers/core"
-                    class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/CausalRivers/core" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
@@ -125,8 +113,7 @@
                 </span>
                 <!-- Dataset Link. -->
                 <span class="link-block">
-                  <a href="https://github.com/CausalRivers/codebase"
-                    class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/CausalRivers/codebase" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
@@ -143,47 +130,33 @@
 
   <section class="section">
     <div class="container is-max-desktop">
-
       <div class="columns is-centered">
         <!-- Visual Effects. -->
         <div class="column has-text-centered">
           <div class="content">
             <h2 class="title is-3">RiversEastGermany</h2>
-
             <img src="./static/images/eg.png" class="interpolation-image" alt="Interpolation end reference image." />
-            <p>
-              We provide a causal ground truth graph with 666 nodes that spans over the full area of the former
-              east-german republic. For each nodes, a high resolution time-series that spans 5 years is provided.
+            <p style="font-size: 0.9rem;" class="is-centered">
+              We provide a causal ground truth graph with <strong>666 nodes</strong> that spans over the full area of the former East-German republic.
+              For each nodes, a high resolution time-series that spans <strong>5 years</strong> is provided.
             </p>
           </div>
         </div>
-        <!--/ Visual Effects. -->
-
-        <!-- Matting. -->
         <div class="column has-text-centered">
           <h2 class="title is-3">RiversBavaria</h2>
           <div class="columns is-centered">
             <div class="column content">
               <img src="./static/images/b.png" class="interpolation-image" alt="Interpolation end reference image." />
-
-              <p>
-                On top of the main benchmark, we provide a similary sized ground truth graph for the state of bavaria
-                which holds 495 nodes and time-series for the same 5 year period.
+              <p style="font-size: 0.9rem;" class="is-centered">
+                On top of the main benchmark, we provide a similarly sized ground truth graph for the state of Bavaria which holds <strong>495 nodes</strong> and time-series for the same <strong>5 year period</strong>.
               </p>
             </div>
 
           </div>
         </div>
       </div>
-      <!--/ Matting. -->
-
-
     </div>
   </section>
-
-
-
-
 
   <section class="section">
     <div class="container is-max-desktop">
@@ -193,40 +166,25 @@
           <h2 class="title is-3">Abstract</h2>
           <div class="content has-text-justified">
             <p>
-              Causal discovery, or identifying causal relationships from observational data, is a
-              notoriously challenging task, with numerous methods proposed to tackle it. De-
-              spite this, in-the-wild evaluation is still lacking, as works frequently rely on syn-
-              thetic data evaluation and sparse real-world examples under critical theoretical
-              assumptions.
+              Causal discovery, or identifying causal relationships from observational data, is a notoriously challenging task, with numerous methods proposed to tackle it.
+              Despite this, in-the-wild evaluation is still lacking, as works frequently rely on synthetic data evaluation and sparse real-world examples under critical theoretical assumptions.
             </p>
             <p>
-              Real-world causal structures, however, are often complex, evolv-
-              ing over time, non-linear, and influenced by unobserved factors, making it hard
-              for practitioners to select appropriate methods. To bridge this gap, we introduce
-              CausalRivers, the largest in-the-wild causal discovery benchmarking kit for time
-              series data to date.
+              Real-world causal structures, however, are often complex, evolving over time, non-linear, and influenced by unobserved factors, making it hard for practitioners to select appropriate methods.
+              To bridge this gap, we introduce <strong>CausalRivers</strong>, the largest in-the-wild causal discovery benchmarking kit for time series data to date.
             </p>
             <p>
-              CausalRivers features an extensive dataset on river discharge
-              that covers the complete eastern German territory (666 measurement stations) and
-              the state of Bavaria (494 measurement stations). It spans the years 2019 to 2023
-              with a 15-minute temporal resolution. Further, we provide data from a recent flood
-              around the Elbe River, as an event with a pronounced distributional shift. Lever-
-              aging multiple sources of information and time-series meta-data, we constructed
-              two distinct causal ground truth graphs (Bavaria and eastern Germany). These
-              graphs can be sampled to generate thousands of subgraphs to benchmark causal
-              discovery across diverse and challenging settings.
+              CausalRivers features an extensive dataset on river discharge that covers the complete eastern German territory (666 measurement stations) and the state of Bavaria (494 measurement stations).
+              It spans the years 2019 to 2023 with a 15-minute temporal resolution.
+              Further, we provide data from a recent flood around the Elbe River, as an event with a pronounced distributional shift.
+              Leveraging multiple sources of information and time-series meta-data, we constructed two distinct causal ground truth graphs (Bavaria and eastern Germany).
+              These graphs can be sampled to generate thousands of subgraphs to benchmark causal discovery across diverse and challenging settings.
             </p>
             <p>
-              To demonstrate the utility of our benchmarking kit, we evaluate several causal discovery approaches
-              through
-              multiple experiments and introduce effective baselines, identifying several areas
-              for enhancement. CausalRivers has the potential to facilitate robust evaluations
-              and comparisons of causal discovery methods. Besides this primary purpose, we
-              also expect that this dataset will be relevant for connected areas of research, such
-              as time series forecasting and anomaly detection. Based on this, we hope to estab-
-              lish benchmark-driven method development that fosters advanced techniques for
-              causal discovery, as is the case for many other areas of machine learning.
+              To demonstrate the utility of our benchmarking kit, we evaluate several causal discovery approaches through multiple experiments and introduce effective baselines, identifying several areas for enhancement.
+              CausalRivers has the potential to facilitate robust evaluations and comparisons of causal discovery methods.
+              Besides this primary purpose, we also expect that this dataset will be relevant for connected areas of research, such as time series forecasting and anomaly detection.
+              Based on this, we hope to establish benchmark-driven method development that fosters advanced techniques for causal discovery, as is the case for many other areas of machine learning.
             </p>
           </div>
         </div>
@@ -237,11 +195,9 @@
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
           <div class="publication-video">
-            <iframe src="./static/videos/ph.mp4" frameborder="0" allow="autoplay; encrypted-media"
-              allowfullscreen></iframe>
+            <iframe src="./static/videos/ph.mp4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
           <p>River discharge changing throughout the year</p>
-
         </div>
       </div>
       <!--/ Paper video. -->
@@ -250,31 +206,23 @@
 
   <section class="section">
     <div class="container is-max-desktop">
-
       <div class="columns is-centered has-text-centered">
-
         <!-- Visual Effects. -->
         <div class="column">
           <div class="content">
             <h2 class="title is-3">Current Benchmarking Results</h2>
 
-            <img src="./static/images/current.png" class="interpolation-image"
-              alt="Interpolation end reference image." />
+            <img src="./static/images/current.png" class="interpolation-image" alt="Interpolation end reference image." />
             <p>
-              We keep this updated frequently so feel free to provide the results of your methods! (NEEDS PROPER
-              UPDATES)
+              We keep this updated frequently so feel free to provide the results of your methods!
+              <br>
+              (NEEDS PROPER UPDATES)
             </p>
           </div>
         </div>
         <!--/ Visual Effects. -->
-
-
-
       </div>
   </section>
-
-
-
 
   <section class="section">
     <div class="container is-max-desktop">
@@ -284,50 +232,44 @@
           <h2 class="title is-3">Related Links</h2>
           <div class="content has-text-justified">
             <p>
-              While Causal Rivers is, by far, the largest causal discovery benchmark for time series from real-world
-              data, the more benchmarking the better! While we are not connected to these projects, we specifically
-              encourage to also test your methods on:</p>
-            <p> <a href="https://proceedings.mlr.press/v236/mogensen24a.html">Causal discovery in a complex industrial
-                system: A time series benchmark</a></p>
-            <p><a href="https://arxiv.org/abs/2406.04598">OCDB: Revisiting Causal Discovery with a Comprehensive
-                Benchmark and Evaluation Framework</a></p>
-            <p><a href="http://arxiv.org/abs/2310.01753">Realistically Generated Time-series for Benchmarking of Causal
-                Discovery</a></p>
-            <p><a href="hhttps://causeme.uv.es/">CauseMe: An online system for benchmarking causal discovery methods</a>
+              While Causal Rivers is, by far, the largest causal discovery benchmark for time series from real-world data, the more benchmarking the better! While we are not connected to these projects, we specifically encourage to also test your methods on:
             </p>
+            <ul>
+              <li><a href="https://proceedings.mlr.press/v236/mogensen24a.html">Causal discovery in a complex industrial system: A time series benchmark</a></li>
+              <li><a href="https://arxiv.org/abs/2406.04598">OCDB: Revisiting Causal Discovery with a Comprehensive Benchmark and Evaluation Framework</a></li>
+              <li><a href="http://arxiv.org/abs/2310.01753">Realistically Generated Time-series for Benchmarking of Causal Discovery</a></li>
+              <li><a href="https://causeme.uv.es/">CauseMe: An online system for benchmarking causal discovery methods</a></li>
+            </ul>
           </div>
         </div>
       </div>
       <!--/ Abstract. -->
-
-
     </div>
   </section>
-
-
-
 
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@inproceedings{
-      2025causalrivers,
-      title={CausalRivers - Scaling up benchmarking of causal discovery for real-world time-series},
-      author={Gideon, Stein and Maha, Shadaydeh and Niklas, Penzel and Joachim Denzler,},
-      booktitle={The Thirteenth International Conference on Learning Representations},
-      year={2025},
-      url={https://openreview.net/forum?id=wmV4cIbgl6}}</code></pre>
+      <pre>
+      <code>
+@inproceedings{2025causalrivers,
+  title={CausalRivers - Scaling up benchmarking of causal discovery for real-world time-series},
+  author={Gideon, Stein and Maha, Shadaydeh and Niklas, Penzel and Joachim Denzler,},
+  booktitle={The Thirteenth International Conference on Learning Representations},
+  year={2025},
+  url={https://openreview.net/forum?id=wmV4cIbgl6}
+}     </code>
+      </pre>
     </div>
   </section>
-
 
   <footer class="footer">
     <div class="container">
       <div class="content has-text-centered">
-        <a class="icon-link" href="./static/videos/nerfies_paper.pdf">
+        <a class="icon-link" href="https://openreview.net/pdf?id=wmV4cIbgl6>">
           <i class="fas fa-file-pdf"></i>
         </a>
-        <a class="icon-link" href="https://github.com/keunhong" class="external-link" disabled>
+        <a class="icon-link" href="https://github.com/cvjena" class="external-link" disabled>
           <i class="fab fa-github"></i>
         </a>
       </div>
@@ -335,20 +277,15 @@
         <div class="column is-8">
           <div class="content">
             <p>
-              This website is licensed under a <a rel="license"
-                href="http://creativecommons.org/licenses/by-sa/4.0/">Creative
-                Commons Attribution-ShareAlike 4.0 International License</a>.
-              The source code of this site is borrowed from <a
-                href="https://github.com/nerfies/nerfies.github.io">Here</a>.
+              This website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+              The source code of this site is borrowed from <a href="https://github.com/nerfies/nerfies.github.io">here</a>.
               We thank its creators for their work.
-
             </p>
           </div>
         </div>
       </div>
     </div>
   </footer>
-
 </body>
 
 </html>
