Add lq version of images and video

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="column has-text-centered">
           <div class="content">
             <h2 class="title is-3">RiversEastGermany</h2>
-            <img src="./static/images/eg.png" class="interpolation-image" alt="Interpolation end reference image." />
+            <img src="./static/images/eg_web.webp" class="interpolation-image" alt="Rivers in East-Germany" />
             <p style="font-size: 0.9rem;" class="is-centered">
               We provide a causal ground truth graph with <strong>666 nodes</strong> that spans over the full area of the former East-German republic.
               For each nodes, a high resolution time-series that spans <strong>5 years</strong> is provided.
@@ -146,7 +146,7 @@
           <h2 class="title is-3">RiversBavaria</h2>
           <div class="columns is-centered">
             <div class="column content">
-              <img src="./static/images/b.png" class="interpolation-image" alt="Interpolation end reference image." />
+              <img src="./static/images/b_web.webp" class="interpolation-image" alt="Rivers in Bavaria" />
               <p style="font-size: 0.9rem;" class="is-centered">
                 On top of the main benchmark, we provide a similarly sized ground truth graph for the state of Bavaria which holds <strong>495 nodes</strong> and time-series for the same <strong>5 year period</strong>.
               </p>
@@ -195,7 +195,7 @@
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
           <div class="publication-video">
-            <iframe src="./static/videos/ph.mp4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe src="./static/videos/ph_lq.mp4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
           <p>River discharge changing throughout the year</p>
         </div>
