add missing height statement :^)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <script defer src="./static/js/fontawesome.all.min.js"></script>
   <script defer src="./static/js/bulma-carousel.min.js"></script>
   <script defer src="./static/js/bulma-slider.min.js"></script>
-  <script src="./static/js/index.js"></script>
+  <script defer src="./static/js/index.js"></script>
 </head>
 
 <body>
@@ -137,7 +137,7 @@
         <div class="column has-text-centered">
           <div class="content">
             <h2 class="title is-3">RiversEastGermany</h2>
-            <img src="./static/images/eg_web.webp" class="interpolation-image" alt="Rivers in East-Germany" width="500" />
+            <img src="./static/images/eg_web.webp" class="interpolation-image" alt="Rivers in East-Germany" width="500" height="702" />
             <p style="font-size: 0.9rem;" class="is-centered">
               We provide a causal ground truth graph with <strong>666 nodes</strong> that spans over the full area of the former East-German republic.
               For each nodes, a high resolution time-series that spans <strong>5 years</strong> is provided.
@@ -148,7 +148,7 @@
           <h2 class="title is-3">RiversBavaria</h2>
           <div class="columns is-centered">
             <div class="column content">
-              <img src="./static/images/b_web.webp" class="interpolation-image" alt="Rivers in Bavaria" width="500" />
+              <img src="./static/images/b_web.webp" class="interpolation-image" alt="Rivers in Bavaria" width="500" height="699" />
               <p style="font-size: 0.9rem;" class="is-centered">
                 On top of the main benchmark, we provide a similarly sized ground truth graph for the state of Bavaria which holds <strong>495 nodes</strong> and time-series for the same <strong>5 year period</strong>.
               </p>
