--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title"><u>CausalRivers</u><br> Scaling up benchmarking of causal discovery for real-world time-series</h1>
+            <div class="spotbox spotlight">
+              <h1 class="title is-1 publication-title"><u>CausalRivers</u><br> Scaling up benchmarking of causal discovery for real-world time-series</h1>
+            </div>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
                 <a href="https://github.com/Gideon-Stein">Gideon Stein</a>,</span>
@@ -79,10 +81,13 @@
                 <a href="https://scholar.google.de/citations?hl=en&user=bhpi3vgAAAAJ">Joachim Denzler</a>
               </span>
             </div>
-
             <div class="is-size-5 publication-authors">
               <span class="author-block">Computer Vision Group Jena, Friedrich Schiller University
                 Jena</span>
+            </div>
+            <br>
+            <div class="is-size-5 publication-authors is-dark is">
+              ICLR 2025
             </div>
 
             <div class="column has-text-centered">
