--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <div class="navbar-menu">
       <div class="navbar-start" style="flex-grow: 1; justify-content: center;">
-        <a class="navbar-item" href="https://github.com/cvjena">
+        <a class="navbar-item" href="https://gideon-stein.github.io">
           <span class="icon">
             <i class="fas fa-home"></i>
           </span>
@@ -68,7 +68,7 @@
             </div>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://github.com/Gideon-Stein">Gideon Stein</a>,</span>
+                <a href="https://scholar.google.de/citations?user=Y4bL1asAAAAJ&hl=en">Gideon Stein</a>,</span>
               <span class="author-block">
                 <a href="https://scholar.google.de/citations?user=ElQ7URQAAAAJ&hl=en">Maha Shadaydeh</a>,</span>
               <span class="author-block">
@@ -111,7 +111,7 @@
                 </span>
                 <!-- Code Link. -->
                 <span class="link-block">
-                  <a href="https://github.com/CausalRivers/core" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/CausalRivers/benchmark" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
@@ -119,12 +119,12 @@
                   </a>
                 </span>
                 <!-- Dataset Link. -->
-                <span class="link-block">
-                  <a href="https://github.com/CausalRivers/codebase" class="external-link button is-normal is-rounded is-dark">
+                <!-- <span class="link-block">
+                  <a href="https://github.com/CausalRivers/benchmark" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Experiments</span>
+                    <span>Experiments</span> -->
                   </a>
               </div>
 
@@ -221,9 +221,7 @@
 
             <img src="./static/images/current_web.webp" class="interpolation-image" alt="Interpolation end reference image." width="800" />
             <p>
-              We keep this updated frequently so feel free to provide the results of your methods!
-              <br>
-              (NEEDS PROPER UPDATES)
+              We will update this soon. Details can be also found in the paper. <br> Intstructions on how you can provide results for YOUR method can be found <a href="https://github.com/CausalRivers/benchmark/blob/main/README.md">HERE</a>.
             </p>
           </div>
         </div>
@@ -273,7 +271,7 @@
   <footer class="footer">
     <div class="container">
       <div class="content has-text-centered">
-        <a class="icon-link" href="https://openreview.net/pdf?id=wmV4cIbgl6>">
+        <a class="icon-link" href="https://openreview.net/forum?id=wmV4cIbgl6">
           <i class="fas fa-file-pdf"></i>
         </a>
         <a class="icon-link" href="https://github.com/cvjena" class="external-link" disabled>
@@ -286,7 +284,7 @@
             <p>
               This website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
               The source code of this site is borrowed from <a href="https://github.com/nerfies/nerfies.github.io">here</a>.
-              We thank its creators for their work.
+              We thank its creators for their work. <a rel="license" href="impressum_privacy.html">Impressum and Data privacy</a>
             </p>
           </div>
         </div>
