--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <div class="publication-video">
             <iframe title="Video" src="./static/videos/ph_lq.mp4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen width="800"></iframe>
           </div>
-          <p>River discharge changing throughout the year</p>
+          <p>River discharge measured at 5 different connected locations.</p>
         </div>
       </div>
       <!--/ Paper video. -->
