--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </span>
                 <!-- Code Link. -->
                 <span class="link-block">
-                  <a href="https://github.com/CausalRivers/benchmark" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/CausalRivers/causalrivers" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
@@ -284,8 +284,20 @@
             <p>
               This website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
               The source code of this site is borrowed from <a href="https://github.com/nerfies/nerfies.github.io">here</a>.
-              We thank its creators for their work. <a rel="license" href="impressum_privacy.html">Impressum and Data privacy</a>
+              We thank its creators for their work. 
             </p>
+            <p> We thank the following German state institutions for the provision of data:<br>
+            <a href="https://tlubn.thueringen.de/">Thüringer Landesamt für Umwelt, Bergbau und Naturschutz</a><br>
+            <a href="https://gld.lhw-sachsen-anhalt.de/">Landesbetrieb für Hochwasserschutz und Wasserwirtschaft Sachsen-Anhalt</a><br>
+            <a href="https://www.umwelt.sachsen.de/umwelt/infosysteme/lhwz/index.html">Sächsisches Landesamt für Umwelt, Landwirtschaft und Geologie</a><br>
+            <a href="https://www.lung.mv-regierung.de/">Landesamt für Umwelt, Naturschutz und Geologie Mecklenburg-Vorpommern</a><br>
+            <a href="https://wasserportal.berlin.de/start.php">Senatsverwaltung für Mobilität, Verkehr, Klimaschutz und Umwelt</a><br>
+            <a href="https://lfu.brandenburg.de/lfu/de/">Landesamt für Umwelt Brandenburg</a><br>
+            <a href="https://www.gdws.wsv.bund.de/">Generaldirektion Wasserstraßen und Schifffahrt</a><br>
+            <a href="https://www.hnd.bayern.de/">Bayerisches Landesamt für Umwelt</a><br>
+            </p>
+            All data sources fall under the <a href="https://www.govdata.de/dl-de/by-2-0">Data license Germany</a>.
+            <br><a rel="license" href="impressum_privacy.html">Impressum and Data privacy</a>.
           </div>
         </div>
       </div>
