--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="column has-text-centered">
           <div class="content">
             <h2 class="title is-3">RiversEastGermany</h2>
-            <img src="./static/images/eg_web.webp" class="interpolation-image" alt="Rivers in East-Germany" width="500" height="702" />
+            <img src="./static/images/east.webp" class="interpolation-image" alt="Rivers in East-Germany" width="500" height="702" />
             <p style="font-size: 0.9rem;" class="is-centered">
               We provide a causal ground truth graph with <strong>666 nodes</strong> that spans over the full area of the former East-German republic.
               For each nodes, a high resolution time-series that spans <strong>5 years</strong> is provided.
@@ -153,7 +153,7 @@
           <h2 class="title is-3">RiversBavaria</h2>
           <div class="columns is-centered">
             <div class="column content">
-              <img src="./static/images/b_web.webp" class="interpolation-image" alt="Rivers in Bavaria" width="500" height="699" />
+              <img src="./static/images/bav.webp" class="interpolation-image" alt="Rivers in Bavaria" width="500" height="699" />
               <p style="font-size: 0.9rem;" class="is-centered">
                 On top of the main benchmark, we provide a similarly sized ground truth graph for the state of Bavaria which holds <strong>495 nodes</strong> and time-series for the same <strong>5 year period</strong>.
               </p>
@@ -219,7 +219,7 @@
           <div class="content">
             <h2 class="title is-3">Current Benchmarking Results</h2>
 
-            <img src="./static/images/current_web.webp" class="interpolation-image" alt="Interpolation end reference image." width="800" />
+            <img src="./static/images/table.png" class="interpolation-image" alt="Interpolation end reference image." width="800" />
             <p>
               We will update this soon. Details can be also found in the paper. <br> Intstructions on how you can provide results for YOUR method can be found <a href="https://github.com/CausalRivers/benchmark/blob/main/README.md">HERE</a>.
             </p>
