--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://openreview.net/forum?id=wmV4cIbgl6" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://www.arxiv.org/abs/2503.17452" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
