update embedded video

--- a/index.html
+++ b/index.html
@@ -197,9 +197,17 @@
         </div>
       </div>
       <!--/ Abstract. -->
-
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/3O98hbeIIXc?si=95P4Sx_O4xZPCv5P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+      
+      <!-- Paper video. -->
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <div class="publication-video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/3O98hbeIIXc?si=95P4Sx_O4xZPCv5P" title="CausalRivers" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+      <!--/ Paper video. -->
+      
       <!-- Paper video. -->
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
