--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
       
   </section>
 
+  <section class="section">
   <!-- Paper video. -->
   <div class="columns is-centered has-text-centered">
     <div class="column is-four-fifths">
@@ -239,6 +240,7 @@
     </div>
   </div>
   <!--/ Paper video. -->
+  </section>
 
   <section class="section">
     <div class="container is-max-desktop">
