--- a/index.html
+++ b/index.html
@@ -225,12 +225,19 @@
           </div>
         </div>
         <!--/ Visual Effects. -->
-        <div class="column is-four-fifths">
-          <div class="publication-video">
-            <iframe title="Video" src="./static/videos/ph_lq.mp4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen width="800"></iframe>
+        <section class="section">
+        <!-- Paper video. -->
+        <div class="columns is-centered has-text-centered">
+          <div class="column is-four-fifths">
+                <div class="publication-video">
+                  <iframe title="Video" src="./static/videos/ph_lq.mp4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen width="800"></iframe>
+                </div>
+                <p>River discharge measured at 5 different connected locations.</p>
           </div>
-          <p>River discharge measured at 5 different connected locations.</p>
         </div>
+        <!--/ Paper video. -->
+  </section>
+        
       </div>
       
   </section>
