--- a/index.html
+++ b/index.html
@@ -223,10 +223,12 @@
               We will update this soon. Details can be also found in the paper. <br> Intstructions on how you can provide results for YOUR method can be found <a href="https://github.com/CausalRivers/benchmark/blob/main/README.md">HERE</a>.
             </p>
           </div>
+          <div class="column is-four-fifths">
           <div class="publication-video">
             <iframe title="Video" src="./static/videos/ph_lq.mp4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen width="800"></iframe>
           </div>
           <p>River discharge measured at 5 different connected locations.</p>
+          </div>
         </div>
          
         <!--/ Visual Effects. -->
